<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Caffeine Competition</string>
    <string name="action_settings">Settings</string>
    <string name="url">https://dazzling-inferno-2149.firebaseio.com/</string>
    <string name="username">USERNAME</string>
    <string name="caffeine_level">CAFFEINE LEVEL:  mg</string>
    <string name="drink">DRINK</string>
    <string name="add">ADD</string>
    <string name="espresso">ESPRESSO</string>
    <string name="latte">LATTE</string>
    <string name="energy_drink">ENERGY DRINK</string>
    <string name="coffee">COFFEE</string>
    <string name="drink_name">NAME</string>
    <string name="caffeine_amount">CAFFEINE AMOUNT</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_email">E-mail</string>
    <string name="prompt_repeat_password">Repeat Password</string>
    <string name="action_register">Register</string>
    <string name="register_weight">Weight (kg)</string>
    <string name="register_height">Height (cm)</string>
    <string name="prompt_password">Password</string>
    <string name="hello_world">hello_world</string>
    <string name="action_logout">Logout</string>
    <string name="password_does_not_match_message">Passwords does not match</string>
    <string name="register_text_placeholder">Not already a user? Register!</string>
    <string name="remove_item">Remove drink?</string>
    <string name="skip_message">Do you want to remove this drink?</string>
    <string name="not_all_fields_filled_out_message">You need to fill in all fields.</string>
    <string name="switch_gender_text">Gender</string>
    <string name="switch_label_text_standard">male</string>
    <string name="user_list_object_temp_mg">20 mg</string>
    <string name="no_drinks">No drinks</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="last_drink">"Drinking: "</string>
    <string name="take_photo">Take photo!</string>
    <string name="KEY_DATETIME">dateTime</string>
    <string name="KEY_DRINKTYPE">drinkType</string>
    <string name="KEY_CAFFEINE_AMOUNT">caffeineAmount</string>
    <string name="KEY_DRINKNAME">drinkName</string>
    <string name="not_already_a_user">"Not already a user? "</string>
    <string name="register">Register!</string>
    <string name="KEY_USERNAME">username</string>
    <string name="KEY_EMAIL">email</string>
    <string name="KEY_WEIGHT">weight</string>
    <string name="KEY_GENDER">gender</string>
    <string name="KEY_PICTURE">picture</string>
    <string name="KEY_USERS">users</string>
    <string name="KEY_TIMES_CONSUMED">timesConsumed</string>
    <string name="SHAREDPREFS_KEY_CAFFEINEAMOUNT">caffeineAmount</string>
    <string name="SHAREDPREFS_KEY_TIMES_CONSUMED">timesConsumed</string>
    <string name="KEY_DRINK_HISTORY">drinkHistory</string>
</resources>
