<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_horizontal_margin">
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="horizontal"
        android:layout_weight="2">

        <ImageView
            android:src="@drawable/kitti"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:scaleType="centerCrop"
            android:padding="1dp"
            android:layout_marginRight="10dp"/>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical"
            android:layout_weight="1">
            <TextView
                android:text="@string/username"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="@dimen/activity_horizontal_margin"/>
            <TextView
                android:id="@+id/fragment_home_textview_caffeine_level"
                android:text="@string/caffeine_level"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="@dimen/activity_horizontal_margin"/>
            <Button
                android:id="@+id/fragment_home_button_drink"
                android:text="@string/drink"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:padding="@dimen/activity_horizontal_margin"
                android:background="@color/blue"/>
        </LinearLayout>
    </LinearLayout>

    <ListView
        android:id="@+id/fragment_home_drink_list"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"/>
</LinearLayout>